2005-11-03  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: C99 stuff, better alsa detection, threading
	clean-up; forgot to define HAVE_MMX_MEMCPY; fix library linking;
	only link openal and alut to testcase

2005-12-02  Sven Panne  <sven.panne@aedion.de>

	* admin/RPM/openal.spec: ALSA support is now autodetected.

	* src/Makefile.am: Fixed include path.

2005-12-01  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, src/arch/alsa/alsa.c: Cleaned up ALSA detection.

	* configure.ac: Moved debugging-related options together. Renamed
	--enable-stub-notify to --enable-debug-stub, the former seems to be a
	cut-n-paste error. Added explanations for debugging-related #defines.

	* CMakeLists.txt, config-osx.h, configure.ac, src/al_main.c,
	src/al_mutexlib.c, src/al_mutexlib.h, src/al_threadlib.c,
	src/al_threadlib.h: Cleaned up threading detection.

	* admin/autotools/m4/acx_pthread.m4: Added.

	* configure.ac: Renamed --enable-gcc-warnings to
	--enable-more-warnings. Actually test for libefence when --enable-efence
	has been given.

2005-11-30  Prakash Punnoor <prakash@punnoor.de>

	* src/arch/i386/floatmul.c, src/arch/i386/mixaudio16_mmx_prk.c
	src/arch/i386/memcpy_mmx_prk.nasm: fix warnings

	* CMakeLists.txt: gcc should compile in C99 mode; remove capture option;
	warnings handling similar to configure.ac (enable DEBUG to have options
	MORE_WARNINGS and WERROR)

2005-11-30  Sven Panne  <sven.panne@aedion.de>

	* CMakeLists.txt, config-osx.h, configure.ac, src/al_main.c,
	src/arch/linux/lin_dsp.c: Always include capture support, as required by
	OpenAL 1.1.

	* Makefile.am, configure.ac: Cleaned up handling of warning-related
	configure options so we have three now: --enable-warnings (default
	"yes"), --enable-gcc-warnings (default "no"), and --enable-werror
	(default "no").

	* admin/autotools/m4/alut_check_cflags_wall.m4: Added.

2005-11-29  Sven Panne  <sven.panne@aedion.de>

	* admin/RPM/openal.spec: Synched with new directory structure.
